--- a/mystic-realm/src/app/components/realm-creator/realm-creator.component.html
+++ b/mystic-realm/src/app/components/realm-creator/realm-creator.component.html
@@ -1,6 +1,6 @@
 <h1>Realm creator!</h1>
-<div id="toolbar">
-  <button></button>
+<div id="toolbar" style="margin-bottom: 20px">
+  <button (click)="setSelectedObject(realm[3][2])"><img src="/assets/empty.png"></button>
 </div>
 <div id="Realm">
   <table [cellSpacing]="0" [cellPadding]="0">
