--- a/mystic-realm/src/app/app.component.html
+++ b/mystic-realm/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header>
   <button routerLink="/path-finder">Path finder</button>
   <button routerLink="/realm-creator">Realm creator</button>
+  <button routerLink="/dungeon-creator">Dungeon creator</button>
 </header>
 <router-outlet></router-outlet>
